[gd_scene load_steps=14 format=3 uid="uid://cq86auycj8b6o"]

[ext_resource type="Script" path="res://scenes/SongSelection/SongSelection.gd" id="1_hoja7"]
[ext_resource type="Shader" path="res://shaders/Blur.gdshader" id="2_1t71w"]
[ext_resource type="PackedScene" uid="uid://oe4x3sx2iwfv" path="res://scenes/SongSelection/SongSelectionItemMenu/SongSelectionItemMenu.tscn" id="3_jx3iy"]
[ext_resource type="Theme" uid="uid://dcjudft85l8o2" path="res://themes/windows_10_light/theme.tres" id="4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h6bw1"]
shader = ExtResource("2_1t71w")
shader_parameter/animate = true
shader_parameter/power = 4.395
shader_parameter/radius = 1.0
shader_parameter/square_scale = 0.1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wwmjd"]
bg_color = Color(1, 1, 1, 0.682353)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="ImageTexture" id="7"]

[sub_resource type="StyleBoxFlat" id="8"]
bg_color = Color(0.760784, 0.0705882, 0.572549, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxEmpty" id="9"]

[sub_resource type="Theme" id="6"]
VScrollBar/icons/decrement = SubResource("7")
VScrollBar/icons/decrement_highlight = SubResource("7")
VScrollBar/icons/decrement_pressed = SubResource("7")
VScrollBar/icons/increment = SubResource("7")
VScrollBar/icons/increment_highlight = SubResource("7")
VScrollBar/icons/increment_pressed = SubResource("7")
VScrollBar/styles/grabber = SubResource("8")
VScrollBar/styles/grabber_highlight = SubResource("8")
VScrollBar/styles/grabber_pressed = SubResource("8")
VScrollBar/styles/scroll = SubResource("9")
VScrollBar/styles/scroll_focus = null

[sub_resource type="Animation" id="Animation_fxdh3"]
resource_name = "Close"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/SongSelectionWindow:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/SongSelectionWindow:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_wk1vx"]
resource_name = "Open"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/SongSelectionWindow:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/SongSelectionWindow:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_70634"]
_data = {
"Close": SubResource("Animation_fxdh3"),
"Open": SubResource("Animation_wk1vx")
}

[node name="SongSelection" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("1_hoja7")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 12

[node name="SongSelectionWindow" type="Panel" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_h6bw1")
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 75.0
offset_top = 75.0
offset_right = -75.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(360, 240)
mouse_filter = 1
theme = ExtResource("4")

[node name="BG" type="Panel" parent="CanvasLayer/SongSelectionWindow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wwmjd")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/SongSelectionWindow"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="Search" type="HBoxContainer" parent="CanvasLayer/SongSelectionWindow/VBoxContainer"]
layout_mode = 2
offset_right = 730.0
offset_bottom = 39.0

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/SongSelectionWindow/VBoxContainer/Search"]
layout_mode = 2
offset_right = 730.0
offset_bottom = 39.0
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_uneditable_color = Color(0.215686, 0.215686, 0.215686, 1)
theme_override_colors/font_placeholder_color = Color(0.615686, 0.615686, 0.615686, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_colors/selection_color = Color(0, 0, 0, 1)
theme_override_colors/clear_button_color = Color(0, 0, 0, 1)
theme_override_colors/clear_button_color_pressed = Color(0, 0, 0, 1)
placeholder_text = "Find your songs..."

[node name="Spacer" type="Control" parent="CanvasLayer/SongSelectionWindow/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
anchors_preset = 0
offset_top = 43.0
offset_right = 730.0
offset_bottom = 53.0

[node name="List" type="ScrollContainer" parent="CanvasLayer/SongSelectionWindow/VBoxContainer"]
layout_mode = 2
offset_top = 57.0
offset_right = 730.0
offset_bottom = 387.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("6")

[node name="Items" type="VBoxContainer" parent="CanvasLayer/SongSelectionWindow/VBoxContainer/List"]
layout_mode = 2
offset_right = 730.0
offset_bottom = 330.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buttons" type="HBoxContainer" parent="CanvasLayer/SongSelectionWindow/VBoxContainer"]
layout_mode = 2
offset_top = 391.0
offset_right = 730.0
offset_bottom = 430.0
alignment = 1

[node name="CloseButton" type="Button" parent="CanvasLayer/SongSelectionWindow/VBoxContainer/Buttons"]
layout_mode = 2
offset_left = 337.0
offset_right = 392.0
offset_bottom = 39.0
text = "Close"

[node name="UpdateTimer" type="Timer" parent="CanvasLayer"]
wait_time = 30.0
autostart = true

[node name="SongSelectionItemMenu" parent="CanvasLayer" instance=ExtResource("3_jx3iy")]
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_70634")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="item_rect_changed" from="CanvasLayer/SongSelectionWindow" to="." method="_on_SongSelectionWindow_rect_changed"]
[connection signal="pressed" from="CanvasLayer/SongSelectionWindow/VBoxContainer/Buttons/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="timeout" from="CanvasLayer/UpdateTimer" to="." method="_on_UpdateTimer_timeout"]
